feat: Add Qdrant integration and `tasks/search`

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@qdrant/js-client-rest": "^1.6.0",
     "apisauce": "^3.0.0",
     "dotenv": "^16.0.3",
+    "langchain": "^0.0.189",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.1"
   }
 }
