feat: Add `person`

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "langchain": "^0.0.189",
     "nodemon": "^2.0.22",
+    "openai": "^4.20.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.1"
   }
